[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/profile/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]

[node name="UserProfile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1792.0
margin_bottom = 1008.0
rect_scale = Vector2( 0.125, 0.125 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -408.5
margin_right = 500.0
margin_bottom = 408.5
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="Container" instance=ExtResource( 2 )]
margin_right = 1000.0
text = "NEW PROFILE"

[node name="ProfileBox" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1000.0
margin_bottom = 688.0
custom_constants/separation = 15

[node name="UsernameBox" type="HBoxContainer" parent="Container/ProfileBox"]
margin_right = 1000.0
margin_bottom = 89.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/ProfileBox/UsernameBox"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 84.0
rect_min_size = Vector2( 490, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Username:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/ProfileBox/UsernameBox"]
margin_left = 515.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Remarks" type="HBoxContainer" parent="Container/ProfileBox"]
margin_top = 104.0
margin_right = 1000.0
margin_bottom = 193.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/ProfileBox/Remarks"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 84.0
rect_min_size = Vector2( 490, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Remarks:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/ProfileBox/Remarks"]
margin_left = 515.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Count" type="HBoxContainer" parent="Container/ProfileBox"]
margin_top = 208.0
margin_right = 1000.0
margin_bottom = 287.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/ProfileBox/Count"]
margin_right = 490.0
margin_bottom = 79.0
rect_min_size = Vector2( 490, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Count:"
align = 2

[node name="Slider" type="HSlider" parent="Container/ProfileBox/Count"]
margin_left = 515.0
margin_right = 1000.0
margin_bottom = 79.0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = 1.0
max_value = 50.0
value = 25.0

[node name="Timing" type="HBoxContainer" parent="Container/ProfileBox"]
margin_top = 302.0
margin_right = 1000.0
margin_bottom = 381.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/ProfileBox/Timing"]
margin_right = 490.0
margin_bottom = 79.0
rect_min_size = Vector2( 490, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Timing:"
align = 2

[node name="Slider" type="HSlider" parent="Container/ProfileBox/Timing"]
margin_left = 515.0
margin_right = 1000.0
margin_bottom = 79.0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = 1.0
max_value = 50.0
value = 25.0

[node name="ConfirmButton" type="Button" parent="Container/ProfileBox"]
margin_left = 354.0
margin_top = 396.0
margin_right = 645.0
margin_bottom = 481.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "SUBMIT"

[node name="Notification" type="Label" parent="Container"]
margin_top = 738.0
margin_right = 1000.0
margin_bottom = 817.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Enter Your Information!"
align = 1
autowrap = true

[connection signal="pressed" from="Container/ProfileBox/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
